--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -18,11 +18,12 @@
       padding: 20px;
     }
     .card {
+      position: relative;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
       overflow: hidden;
-      cursor: pointer;
       background: white;
+      color: black;
     }
     iframe {
       width: 100%;
@@ -30,6 +31,71 @@
       border: none;
       display: block;
     }
+    .btn-open {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      background: #388e3c;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 4px 10px;
+      font-size: 0.85em;
+      cursor: pointer;
+      z-index: 10;
+      user-select: none;
+      transition: background-color 0.3s ease;
+    }
+    .btn-open:hover {
+      background-color: #2c6f2c;
+    }
+    /* Modal */
+    #modalOverlay {
+      display: none;
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.75);
+      z-index: 1000;
+      align-items: center;
+      justify-content: center;
+    }
+    #modalContent {
+      position: relative;
+      width: 90%;
+      max-width: 900px;
+      height: 80vh;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      overflow: hidden;
+    }
+    #modalContent iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    #modalClose {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: #e74c3c;
+      border: none;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+      line-height: 28px;
+      cursor: pointer;
+      z-index: 10;
+      user-select: none;
+      transition: background-color 0.3s ease;
+    }
+    #modalClose:hover {
+      background-color: #c0392b;
+    }
+
     @media (max-width: 1200px) {
       .grid {
         grid-template-columns: repeat(2, 1fr);
@@ -46,26 +112,71 @@
   </style>
 </head>
 <body>
+
   <div class="grid">
     <div class="card" data-url="https://grupodvbr.github.io/MENU-LEONARDO/index.resumofinanceiro.html">
+      <button class="btn-open" title="Abrir relatório">Abrir</button>
       <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.resumofinanceiro.html"></iframe>
     </div>
     <div class="card" data-url="https://grupodvbr.github.io/MENU-LEONARDO/index.delivery.html">
+      <button class="btn-open" title="Abrir relatório">Abrir</button>
       <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.delivery.html"></iframe>
     </div>
     <div class="card" data-url="https://grupodvbr.github.io/MENU-LEONARDO/index.cancelamentos.html">
+      <button class="btn-open" title="Abrir relatório">Abrir</button>
       <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.cancelamentos.html"></iframe>
     </div>
     <div class="card" data-url="https://grupodvbr.github.io/MENU-LEONARDO/index.conciliacao.html">
+      <button class="btn-open" title="Abrir relatório">Abrir</button>
       <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.conciliacao.html"></iframe>
     </div>
     <div class="card" data-url="https://grupodvbr.github.io/MENU-LEONARDO/index.meta.html">
+      <button class="btn-open" title="Abrir relatório">Abrir</button>
       <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.meta.html"></iframe>
     </div>
   </div>
 
+  <!-- Modal -->
+  <div id="modalOverlay">
+    <div id="modalContent">
+      <button id="modalClose" title="Fechar">&times;</button>
+      <iframe src="" frameborder="0"></iframe>
+    </div>
+  </div>
+
   <script>
-    // Para cada card, adiciona escuta de triple click
+    const modalOverlay = document.getElementById('modalOverlay');
+    const modalIframe = modalOverlay.querySelector('iframe');
+    const modalClose = document.getElementById('modalClose');
+
+    // Abrir modal com url
+    function abrirModal(url) {
+      modalIframe.src = url;
+      modalOverlay.style.display = 'flex';
+    }
+
+    // Fechar modal
+    function fecharModal() {
+      modalIframe.src = '';
+      modalOverlay.style.display = 'none';
+    }
+
+    modalClose.addEventListener('click', fecharModal);
+    modalOverlay.addEventListener('click', e => {
+      if(e.target === modalOverlay) fecharModal();
+    });
+
+    // Botões abrir nos cards
+    document.querySelectorAll('.btn-open').forEach(btn => {
+      btn.addEventListener('click', e => {
+        e.stopPropagation(); // para não disparar o triple click do card
+        const card = btn.closest('.card');
+        const url = card.getAttribute('data-url');
+        abrirModal(url);
+      });
+    });
+
+    // Triple click para abrir em nova aba (mantido)
     document.querySelectorAll('.card').forEach(card => {
       let clickCount = 0;
       let clickTimer = null;
@@ -74,14 +185,12 @@
         clickCount++;
 
         if (clickCount === 3) {
-          // Ao triple click abre a url do card em nova aba
           const url = card.getAttribute('data-url');
           window.open(url, '_blank');
           resetClicks();
           return;
         }
 
-        // Se não chegar a 3 cliques em 600ms, reseta
         if (clickTimer) clearTimeout(clickTimer);
         clickTimer = setTimeout(() => {
           resetClicks();
