--- a/index.meta.html
+++ b/index.meta.html
@@ -11,7 +11,7 @@
       background: #f7f7f7;
       margin: 0;
       padding: 0;
-      color: #000;
+      color: #222;
     }
     header {
       background-color: white;
@@ -21,22 +21,24 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      min-height: 60px;
     }
     header img {
-      height: 50px;
+      height: 40px;
       position: absolute;
       left: 20px;
       top: 50%;
       transform: translateY(-50%);
     }
     header h1 {
-      font-size: 1.6em;
+      font-size: 1.3em;
       font-weight: bold;
       margin: 0;
-      color: #000;
+      color: #222;
       text-align: center;
       width: 100%;
       max-width: 600px;
+      padding-left: 60px;
     }
     .container {
       padding: 20px;
@@ -68,32 +70,38 @@
       box-sizing: border-box;
       font-size: 1em;
     }
-    .filters button,
-    #btnWhats {
-      padding: 10px 20px;
-      border: none;
+    .filters button {
+      margin-top: 10px;
+      background-color: #1e1e2f;
+      color: white;
       border-radius: 8px;
+      padding: 10px 20px;
       font-weight: bold;
       cursor: pointer;
       font-size: 1em;
       user-select: none;
       transition: background-color 0.3s ease;
-    }
-    .filters button {
-      background-color: #1e1e2f;
-      color: white;
+      width: 100%;
+      max-width: 150px;
     }
     .filters button:hover {
       background-color: #363656;
     }
     #btnWhats {
+      width: auto;
+      max-width: 220px;
+      margin: 15px auto 30px auto;
+      display: block;
       background-color: #25d366;
       color: white;
-      margin: 10px 0 30px 0;
-      display: block;
-      width: 100%;
-      max-width: 250px;
+      padding: 12px 20px;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
       text-align: center;
+      font-size: 1.1em;
+      user-select: none;
+      transition: background-color 0.3s ease;
     }
     #btnWhats:hover {
       background-color: #1ebe56;
@@ -140,6 +148,9 @@
       .filters > div {
         flex: unset;
         width: 100%;
+      }
+      .filters button {
+        max-width: 100%;
       }
       #btnWhats {
         max-width: 100%;
