--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -10,7 +10,40 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: #111;
       color: white;
+      padding-top: 40px; /* espaço para cabeçalho fixo */
     }
+    /* Cabeçalho fixo */
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 40px;
+      background: #222;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      padding: 0 15px;
+      z-index: 1100;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.7);
+    }
+    header a {
+      display: flex;
+      align-items: center;
+      color: white;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    header a:hover svg path {
+      fill: #25d366;
+    }
+    header svg {
+      width: 24px;
+      height: 24px;
+      fill: white;
+      transition: fill 0.3s ease;
+    }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -112,6 +145,15 @@
   </style>
 </head>
 <body>
+
+  <header>
+    <a href="index.html" title="Voltar para tela principal" aria-label="Voltar para tela principal">
+      <!-- Ícone de casa simples SVG -->
+      <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
+      </svg>
+    </a>
+  </header>
 
   <div class="grid">
     <div class="card" data-url="https://grupodvbr.github.io/MENU-LEONARDO/index.resumofinanceiro.html">
