--- a/index.meta.html
+++ b/index.meta.html
@@ -17,18 +17,14 @@
       background-color: white;
       padding: 10px 20px;
       border-bottom: 1px solid #ccc;
-      position: relative;
       display: flex;
       align-items: center;
+      gap: 15px; /* espaço entre logo e título */
       justify-content: center;
-      min-height: 60px;
     }
     header img {
       height: 40px;
-      position: absolute;
-      left: 20px;
-      top: 50%;
-      transform: translateY(-50%);
+      flex-shrink: 0; /* não encolher */
     }
     header h1 {
       font-size: 1.3em;
@@ -36,9 +32,7 @@
       margin: 0;
       color: #222;
       text-align: center;
-      width: 100%;
-      max-width: 600px;
-      padding-left: 60px;
+      flex-grow: 1; /* ocupa o espaço restante */
     }
     .container {
       padding: 20px;
