--- a/index.resumofinanceiro.html
+++ b/index.resumofinanceiro.html
@@ -145,7 +145,9 @@ let dados = [];
 window.onload = () => {
   const ontem = new Date();
   ontem.setDate(ontem.getDate() - 1);
-  document.getElementById("dataInicio").value = ontem.toISOString().split('T')[0];
+  const dataFormatada = ontem.toISOString().split('T')[0];
+  document.getElementById("dataInicio").value = dataFormatada;
+  document.getElementById("dataFim").value = dataFormatada;
   carregarDados();
 };
 
