--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -166,13 +166,14 @@
       empresas.map(emp => `<option value="${emp}">${emp}</option>`).join('');
   }
 
+  // Preenche os campos dataInicio e dataFim com o dia anterior (ontem)
   function preencherDataPadrao() {
     const hoje = new Date();
     const ontem = new Date(hoje);
     ontem.setDate(hoje.getDate() - 1);
     const formato = d => d.toISOString().split('T')[0];
     document.getElementById("dataInicio").value = formato(ontem);
-    document.getElementById("dataFim").value = ""; // campo vazio por padrão
+    document.getElementById("dataFim").value = formato(ontem);
   }
 
   function aplicarFiltros() {
