--- a/index.html
+++ b/index.html
@@ -192,6 +192,12 @@
       <div class="icon">💳</div>
       <h2>Conciliações</h2>
     </a>
+
+   <a class="card" href="https://grupodvbr.github.io/SISTEMA-CAP-GRUPO-DV/aprovacao.html" target="_blank">
+    <div class="icon">✅</div>
+    <h2>Aprovação de CAP</h2>
+   </a>
+
   </div>
 
   <!-- Script splash -->
