--- a/index.html
+++ b/index.html
@@ -193,10 +193,11 @@
       <h2>Conciliações</h2>
     </a>
 
-   <a class="card" href="https://grupodvbr.github.io/SISTEMA-CAP-GRUPO-DV/aprovacao.html" target="_blank">
-    <div class="icon">✅</div>
-    <h2>Aprovação de CAP</h2>
-   </a>
+   <a class="card" href="https://seu-link-externo.com">
+  <div class="icon">✅</div>
+  <h2>Aprovação de CAP</h2>
+  </a>
+
 
   </div>
 
