--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <h2>Conciliações</h2>
     </a>
 
-   <a class="card" href="https://seu-link-externo.com">
+   <a class="card" href="https://grupodvbr.github.io/SISTEMA-CAP-GRUPO-DV/aprovacao.html">
   <div class="icon">✅</div>
   <h2>Aprovação de CAP</h2>
   </a>
